Fixed description alignment in infoModal

--- a/src/components/modals/InfoModal/InfoModal.module.css
+++ b/src/components/modals/InfoModal/InfoModal.module.css
@@ -38,11 +38,12 @@
 p.description {
     flex-direction: column;
     gap: 10px;
-    
+    align-items: flex-start;
 }
 
 p.description :last-child {
     line-height: 2;
+    text-align: left;
 }
 
 
